--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,3 +18,11 @@ h1{
     #text-shadow: black 1px 0px, black 1px 1px, black 0px 1px, black -1px 1px, black -1px 0px, black -1px -1px, black 0px -1px, black 1px -1px;
     #font-family: serif;
 }
+
+.ans {
+    font-size: 200%;
+    
+}
+pre {
+    background: linear-gradient(to bottom left, rgba(165, 56, 119, 0.8), rgba(85, 86, 164, 0.8));
+}
