--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,18 @@ h1{
 pre {
     background: linear-gradient(to bottom left, rgba(165, 56, 119, 0.8), rgba(85, 86, 164, 0.8));
 }
+
+.btn {
+  -webkit-border-radius: 27;
+  -moz-border-radius: 27;
+  border-radius: 27px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #5558a4;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
