add pointer and and underlining

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,9 @@ h1{
 
 .ans {
     font-size: 200%;
+    display: inline-block;
+    border-bottom: 1px dashed #000;
+    cursor: pointer;
     
 }
 pre {
